[gd_scene load_steps=8 format=3 uid="uid://bij4k6fyywem7"]

[ext_resource type="Script" path="res://projectiles/enemy_projectiles/enemy_bullet_01.gd" id="1_iseas"]
[ext_resource type="Script" path="res://components/hitbox_component.gd" id="3_gw0v1"]
[ext_resource type="Texture2D" uid="uid://4cyisqkgls4u" path="res://assets/enemy_bullet_02.png" id="3_lg5gm"]
[ext_resource type="Script" path="res://components/flash_component.gd" id="4_vjidj"]

[sub_resource type="AtlasTexture" id="AtlasTexture_31ei1"]
atlas = ExtResource("3_lg5gm")
region = Rect2(0, 0, 24, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_wnw8q"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_31ei1")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_de558"]
radius = 3.0

[node name="EnemyBullet01" type="Node2D"]
script = ExtResource("1_iseas")

[node name="FlashComponent" type="Node" parent="." node_paths=PackedStringArray("sprite")]
script = ExtResource("4_vjidj")
sprite = NodePath("../AnimatedSprite2D")
flash_duration = 0.1

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(2.08165e-12, 1)
sprite_frames = SubResource("SpriteFrames_wnw8q")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(9.53674e-07, 1.78814e-07)
scale = Vector2(0.4, 0.4)

[node name="HitboxComponent" type="Area2D" parent="."]
collision_layer = 0
script = ExtResource("3_gw0v1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxComponent"]
shape = SubResource("CircleShape2D_de558")
